# pixelens

./: .gitignore  AGENTS.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
crates/pixelens/: Cargo.toml
crates/pixelens-actions/: Cargo.toml
crates/pixelens-actions/src/: ai.rs  copy.rs  lib.rs  reverse_image.rs  search.rs  translate.rs
crates/pixelens-capture/: Cargo.toml
crates/pixelens-capture/src/: lib.rs  wayland.rs
crates/pixelens-cli/: Cargo.toml
crates/pixelens-cli/src/: main.rs
crates/pixelens-cli/tests/: cli_tests.rs
crates/pixelens-common/: Cargo.toml
crates/pixelens-config/: Cargo.toml
crates/pixelens-config/src/: lib.rs
crates/pixelens-core/: Cargo.toml
crates/pixelens-core/src/: error.rs  lib.rs  types.rs
crates/pixelens-core/src/actions/: ai.rs  copy.rs  mod.rs  reverse_image.rs  search.rs  translate.rs
crates/pixelens-core/src/ai/: mod.rs  provider_error.rs
crates/pixelens-core/src/capture/: mod.rs  wayland.rs  x11.rs
crates/pixelens-core/src/check/: mod.rs
crates/pixelens-core/src/config/: mod.rs
crates/pixelens-core/src/hotkey/: parser.rs
crates/pixelens-core/src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
crates/pixelens-core/src/menu/: action_bar.rs  fuzzel.rs  mod.rs  stdin.rs  wofi.rs
crates/pixelens-core/src/ocr/: mod.rs  tesseract.rs
crates/pixelens-core/src/search/: google_lens.rs  mod.rs
crates/pixelens-core/src/upload/: custom.rs  mod.rs  zeroxzero.rs
crates/pixelens-hotkey/: Cargo.toml
crates/pixelens-hotkey/src/: lib.rs
crates/pixelens-ipc/: Cargo.toml
crates/pixelens-ipc/src/: client.rs  protocol.rs  server.rs
crates/pixelens-ocr/: Cargo.toml
crates/pixelens-ocr/src/: lib.rs  tesseract.rs
crates/pixelens/src/: main.rs
crates/pixelens/tests/: cli_tests.rs
crates/pixelensd/: Cargo.toml
crates/pixelensd/src/: main.rs
docs/: PROJECT_STATE.md  ROADMAP.md
packaging/systemd/: pixelensd.service
scripts/: install.sh  uninstall.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  types.rs
src-tauri/src/actions/: copy.rs  mod.rs  reverse_image.rs  search.rs  translate.rs
src-tauri/src/ai/: client.rs  mod.rs
src-tauri/src/capture/: mod.rs  wayland.rs
src-tauri/src/commands/: actions.rs  ai.rs  capture.rs  mod.rs  ocr.rs
src-tauri/src/ocr/: mod.rs  tesseract.rs
src-tauri/src/utils/: config.rs
src/components/: CaptureOverlay.tsx  ResultPanel.tsx  SettingsModal.tsx
src/services/: actions.ts  ai.ts  capture.ts  config.ts  ocr.ts  types.ts
