[workspace]
members = [
    "crates/pixelens-common",
    "crates/pixelens-config",
    "crates/pixelens-capture",
    "crates/pixelens-ocr",
    "crates/pixelens-actions",
    "crates/pixelens-ipc",
    "crates/pixelens-hotkey",
    "crates/pixelens-cli",
    "crates/pixelensd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["km-rjun"]
license = "MIT"
repository = "https://github.com/km-rjun/pixelens"

[workspace.dependencies]
pixelens-common = { path = "crates/pixelens-common" }
pixelens-config = { path = "crates/pixelens-config" }
pixelens-capture = { path = "crates/pixelens-capture" }
pixelens-ocr = { path = "crates/pixelens-ocr" }
pixelens-actions = { path = "crates/pixelens-actions" }
pixelens-ipc = { path = "crates/pixelens-ipc" }
pixelens-hotkey = { path = "crates/pixelens-hotkey" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
