[workspace]
members = [
    "crates/pixelens",
    "crates/pixelensd",
    "crates/pixelens-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["km-rjun"]
license = "MIT"
repository = "https://github.com/km-rjun/pixelens"

[workspace.dependencies]
pixelens-core = { path = "crates/pixelens-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
urlencoding = "2.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
fastrand = "2"
gtk-layer-shell = "0.8"
