[package]
name = "pixelens-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Pixelens"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
dirs.workspace = true
ureq.workspace = true
base64.workspace = true
urlencoding.workspace = true
tokio.workspace = true
fastrand.workspace = true
egui.workspace = true
eframe.workspace = true
