[package]
name = "pixelens-hotkey"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hotkey support for Pixelens"

[dependencies]
pixelens-common.workspace = true
pixelens-config.workspace = true
log.workspace = true
thiserror.workspace = true
