[package]
name = "pixelens-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IPC layer for daemon communication"

[dependencies]
pixelens-common.workspace = true
pixelens-config.workspace = true
pixelens-capture.workspace = true
pixelens-ocr.workspace = true
pixelens-actions.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
dirs.workspace = true
thiserror.workspace = true
