[package]
name = "pixelens"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Pixelens"

[[bin]]
name = "pixelens"
path = "src/main.rs"

[features]
default = []
layer-shell = ["pixelens-core/layer-shell"]

[dependencies]
pixelens-core.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
